--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ httplib2==0.15.0
 idna==2.8
 imageio==2.6.0
 imagesize==1.1.0
+importlib-metadata
 ipykernel==5.1.2
 ipython==7.8.0
 ipython_genutils==0.2.0
@@ -133,6 +134,7 @@ pkginfo==1.5.0.1
 plotly==4.3.0
 pluggy==0.13.0
 ply==3.11
+prettytable
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 psutil==5.6.3
@@ -162,6 +164,7 @@ pytest-doctestplus==0.4.0
 pytest-openfiles==0.4.0
 pytest-remotedata==0.3.2
 python-dateutil==2.8.0
+python-utils
 pytz==2019.3
 PyWavelets==1.0.3
 pywin32==223
@@ -177,13 +180,14 @@ rope==0.14.0
 rsa==4.0
 ruamel_yaml==0.15.46
 scikit-image==0.15.0
-scikit-learn==0.21.3
+scikit-learn==1.0.1
 scipy==1.3.1
 seaborn==0.9.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 singledispatch==3.4.0.3
 six==1.12.0
+sklearn==0.0
 snowballstemmer==2.0.0
 sortedcollections==1.1.2
 sortedcontainers==2.1.0
@@ -205,10 +209,12 @@ tables==3.5.2
 tblib==1.4.0
 terminado==0.8.2
 testpath==0.4.2
+threadpoolctl==3.0.0
 toolz==0.10.0
 tornado==6.0.3
 tqdm==4.36.1
 traitlets==4.3.3
+typing-extensions
 unicodecsv==0.14.1
 uritemplate==3.0.1
 urllib3==1.24.2
