--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pip==21.2.3
+$cat runtime.txt
+pip==21.0.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
@@ -9,11 +10,11 @@ Jinja2==2.11.2
 joblib==0.15.1
 jsonify==0.5
 MarkupSafe==1.1.1
-numpy==1.16.5
-requests==2.22.0
-scikit-learn==1.0.1
-scipy==1.3.1
-sklearn==0.21.0
+numpy==1.20.1
+requests==2.25.1
+scikit-learn==0.24.1
+scipy==1.6.2
+sklearn==0.0
 threadpoolctl==2.1.0
 urllib3==1.25.9
 Werkzeug==1.0.1
