--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ numpy==1.20.1
 requests==2.25.1
 scikit-learn==0.24.1
 scipy==1.6.2
+pandas==1.2.4
 sklearn==0.0
 threadpoolctl==2.1.0
 urllib3==1.25.9
